--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li>1</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
